2A/05_Projet_GL/src/test/deca/context/invalid/complet/53_instanceof_str_object.deca
// Description :
//   instanceOf entre : string et Object 
// Resultats :
//    ligne 9 :  l'opération instanceOf n'est pas possible entre 'string' et 'Object'
// Historique :
//  cree le 16/01/2024

{
    "fin du GL" instanceof Object;
}